# jepa_play

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-01-jepa-pinball-iteration.md  2026-07-01-jepa-pinball-v1.md  2026-07-01-jepa-pinball-v2-cibles.md  2026-07-02-jepa-pinball-iteration-2.md
docs/superpowers/specs/: 2026-07-01-jepa-pinball-design.md  2026-07-01-jepa-pinball-v2-cibles-design.md  2026-07-02-iteration-2-design.md
jepa/: __init__.py  data.py  decoder.py  eval.py  heads.py  model.py  planner.py  train.py  viz.py
notebooks/: 01_simulateur.ipynb  01_simulateur.py  02_collecte.ipynb  02_collecte.py  03_jepa.ipynb  03_jepa.py  04_controle.ipynb  04_controle.py  05_iteration.ipynb  05_iteration.py  06_visualisation.ipynb  06_visualisation.py  07_iteration2.ipynb  07_iteration2.py
pinball/: __init__.py  collect.py  config.py  env.py  render.py  sim.py
tests/: test_collect.py  test_config.py  test_data.py  test_env.py  test_eval.py  test_heads.py  test_model.py  test_planner.py  test_render.py  test_sim.py  test_train.py  test_viz.py
