[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jepa-pinball"
version = "0.1.0"
description = "Un agent JEPA qui apprend le flipper (projet pédagogique)"
requires-python = ">=3.10"
dependencies = [
    "pymunk>=7.0",
    "numpy",
    "pillow",
    "torch>=2.3",
]

[project.optional-dependencies]
dev = ["pytest", "jupytext"]
# préinstallés sur Colab ; nécessaires en local pour exécuter les notebooks
notebooks = ["matplotlib", "ipywidgets"]

[tool.setuptools]
packages = ["pinball", "jepa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
